--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <li>Freelancer Invoice</li>
         <li>E-commerce Order</li>
       </ul>
+      <h3>Block Library</h3>
+<div class="block-library">
+  <div class="block" draggable="true" data-type="trigger">Trigger: New Booking</div>
+  <div class="block" draggable="true" data-type="action">Action: Send Email</div>
+  <div class="block" draggable="true" data-type="condition">Condition: After 6 PM</div>
+</div>
     </aside>
 
     <!-- Main Canvas Area -->
